--- a/html/introduction.html
+++ b/html/introduction.html
@@ -29,22 +29,22 @@
 		<ul>
 			<li>
 				<i class="fa fa-fw fa-github"></i>
-				<span>我是一名准前端工程师</span>
+				<span>我是一名学生</span>
 			</li>
 			<li>
 				<i class="fa fa-fw fa-graduation-cap"></i>
-				<span>目前研三，即将工作</span>
+				<span>目前大二</span>
 			</li>
 			<li>
 				<i class="fa fa-fw fa-paper-plane"></i>
-				<span>希望工作成为兴趣的延伸</span>
+				<span>希望以此成为兴趣的延伸</span>
 			</li>
 		</ul>
 	</div>
 </div>
 <div class="page page3" adpaptive-height>
 	<div class="wrap">
-		<h1>实习经历</h1>
+		<h1>经历</h1>
 		<div class="left item animatePage3">
 			<div>
 				<img src="./images/web.jpg" alt="font end for web-demo">
